--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,19 @@
-backports.functools-lru-cache==1.6.1
-beautifulsoup4==4.8.1
 certifi==2019.11.28
-cffi==1.14.0
 chardet==3.0.4
-Click==7.0
-cryptography==2.8
+click==7.1.1
 DateTime==4.3
-enum34==1.1.9
 Flask==1.1.1
-html5lib==1.0.1
-idna==2.8
-ipaddress==1.0.23
+Flask-SQLAlchemy==2.4.1
+idna==2.9
 itsdangerous==1.1.0
-Jinja2==2.10.3
-lxml==4.4.2
+Jinja2==2.11.1
 MarkupSafe==1.1.1
-ndg-httpsclient==0.5.1
-pyasn1==0.4.8
-pycparser==2.20
-pyOpenSSL==19.1.0
+PyMySQL==0.9.3
+python-dotenv==0.12.0
 pytz==2019.3
-requests==2.22.0
-six==1.13.0
-soupsieve==1.9.5
-urllib3==1.25.7
-webencodings==0.5.1
-Werkzeug==0.16.0
+requests==2.23.0
+SQLAlchemy==1.3.15
+typing==3.7.4.1
+urllib3==1.25.8
+Werkzeug==1.0.0
 zope.interface==4.7.2
